Actions
Bug #16842
closed`inspect` prints the UTF-8 character U+0085 (NEXT LINE) verbatim even though it is not printable
Bug #16842:
`inspect` prints the UTF-8 character U+0085 (NEXT LINE) verbatim even though it is not printable
Description
The UTF-8 character U+0085 (NEXT LINE) is not printable, but inspect prints the character verbatim (within double quotation):
0x85.chr(Encoding::UTF_8).match?(/\p{print}/) # => false
0x85.chr(Encoding::UTF_8).inspect
#=> "\"
\""
My understanding is that non-printable characters are not printed verbatim with inspect:
while printable characters are:
I ran the following script, and found that U+0085 is the only character within the range U+0000 to U+FFFF that behaves like this.
Actions